[CICD] 도커 파일 수정

--- a/authentication/Dockerfile
+++ b/authentication/Dockerfile
@@ -5,10 +5,12 @@ WORKDIR /app
 # Gradle wrapper 및 설정 파일 복사
 COPY gradlew .
 COPY gradle gradle
-COPY settings.gradle .
 COPY build.gradle .
 
-# 의존성 다운로드를 위한 빌드 파일 복사 
+# authentication 빌드에 필요한 모듈만 포함하는 settings.gradle 생성
+RUN echo "include 'authentication'\ninclude 'authorization-shared'\ninclude 'event-schema-shared'" > settings.gradle
+
+# 의존성 다운로드를 위한 빌드 파일 복사
 COPY authorization-shared/build.gradle authorization-shared/build.gradle
 COPY event-schema-shared/build.gradle event-schema-shared/build.gradle
 COPY authentication/build.gradle authentication/build.gradle
@@ -16,7 +18,7 @@ COPY authentication/build.gradle authentication/build.gradle
 # Gradle wrapper 실행 권한 부여
 RUN chmod +x gradlew
 
-# 의존성 다운로드 
+# 의존성 다운로드
 RUN ./gradlew :authentication:dependencies --no-daemon || true
 
 # 전체 소스 코드 복사
