--- a/reservation/src/test/resources/application.yml
+++ b/reservation/src/test/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  test:
+    database:
+      replace: none
   datasource:
     url: jdbc:h2:mem:testdb;MODE=PostgreSQL;INIT=CREATE DOMAIN IF NOT EXISTS JSONB AS JSON;
     driver-class-name: org.h2.Driver
