--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     // === Kafka 의존성 ===
     implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+    // === Spring Validation 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
