--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     // === Spring Validation 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // === ArchUnit 아키텍처 테스트 의존성 ===
+    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
 }
 
 tasks.named('test') {
