--- a/codecov.yml
+++ b/codecov.yml
@@ -54,6 +54,13 @@ flags:
     # Event-Schema-Shared 테스트가 실행되지 않으면 이전 커버리지 유지
     carryforward: true
 
+  # Payment 모듈
+  payment:
+    paths:
+      - payment/
+    # Payment 테스트가 실행되지 않으면 이전 커버리지 유지
+    carryforward: true
+
 # PR에 달리는 커버리지 코멘트 설정
 comment:
   # 코멘트 레이아웃: 도달률, 차이, flag별 커버리지, 트리 뷰
